--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,52 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Caesar Cipher</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div id="root">
-      <h1>Hello world!</h1>
+
+<head>
+  <meta charset="utf-8">
+  <title>Cifra de César</title>
+  <!--font awesome icons-->
+  <script src="https://kit.fontawesome.com/11e9e029cd.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <header id="root">
+    <h1>Caesar's Crush <i class="far fa-heart"></i></h1>
+    <h2>Mande uma mensagem secreta para o seu crush!!</h2>
+  </header>
+
+  <section class="main-section">
+    <form>
+      <label for="message-input">Mensagem</label>
+      <textarea id="message-input" placeholder="Digite sua mensagem..." name="message-box" required></textarea>
+      <label for="offset-input">Posição</label>
+      <input type="number" id="offset-input" placeholder="0" name="offset" />
+      <label  for="result-input">Resultado</label>
+      <textarea id="result-input" placeholder="Resultado..." name="result-input"></textarea>
+      <br>
+      <button type="submit" id="code-btn">Codificar</button>
+      <button type="submit" id="decode-btn">Decodificar</button>
+    </form>
+  </section>
+
+  <section class="second-section">
+    <div class="instruction-div">
+      <h3>Instruções</h3>
+      <p>
+        <ol>
+          <li>blá blá blá</li>
+          <li>whiskas sachê</li>
+          <li>blá blá blá</li>
+        </ol>
+      </p>
     </div>
-    <script src="index.js" type="module"></script>
-  </body>
+    <div class="about-cipher-div">
+      <h3>Sobre a cifra de César</h3>
+      <p>Mussum Ipsum, cacilds vidis litro abertis. Viva Forevis aptent taciti sociosqu ad litora torquent. Quem num gosta di mé, boa gentis num é. Interagi no mé, cursus quis, vehicula ac nisi. Praesent malesuada urna nisi, quis volutpat erat hendrerit non. Nam vulputate dapibus.</p>
+    </div>
+  </section>
+
+  <script src="index.js" type="module"></script>
+</body>
+
 </html>
