--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,9 @@
   </section>
 
   <section class="second-section">
+    <div class="div-second-section">
     <div class="instruction-div">
-      <h3>Instruções</h3>
+      <h3 class="second-section-titles">Instruções</h3>
       <p>
         <ol>
           <li>blá blá blá</li>
@@ -50,11 +51,12 @@
       </p>
     </div>
     <div class="about-cipher-div">
-      <h3>Sobre a cifra de César</h3>
+      <h3 class="second-section-titles">Sobre a cifra de César</h3>
       <p>Mussum Ipsum, cacilds vidis litro abertis. Viva Forevis aptent taciti sociosqu ad litora torquent. Quem num
         gosta di mé, boa gentis num é. Interagi no mé, cursus quis, vehicula ac nisi. Praesent malesuada urna nisi, quis
         volutpat erat hendrerit non. Nam vulputate dapibus.</p>
     </div>
+  </div>
   </section>
 
   <script src="index.js" type="module"></script>
