esqueleto terminado, e toques finais no estilo

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
           <textarea id="message-input" placeholder="Digite sua mensagem..." name="message-box" required></textarea>
         </div>
         <div class="form-div-offset">
-          <label for="offset-input" class="message-title" >Posição</label>
+          <label for="offset-input" class="message-title">Posição</label>
           <input type="number" id="offset-input" placeholder="0" name="offset" />
         </div>
         <div class="form-div-message">
@@ -40,23 +40,26 @@
 
   <section class="second-section">
     <div class="div-second-section">
-    <div class="instruction-div">
-      <h3 class="second-section-titles">Instruções</h3>
-      <p>
-        <ol>
-          <li>blá blá blá</li>
-          <li>whiskas sachê</li>
-          <li>blá blá blá</li>
-        </ol>
-      </p>
+      <div class="instruction-div">
+        <h3 class="second-section-titles">Instruções</h3>
+        <p>
+          <ol>
+            <li>Primeiro coloque a frase que gostaria de codificar/decodificar</li>
+            <li>Depois só clicar nos botões</li>
+            <li>E por ultimo, divirta-se!</li>
+          </ol>
+        </p>
+      </div>
+      <div class="about-cipher-div">
+        <h3 class="second-section-titles">Sobre a cifra de César</h3>
+        <p>Em criptografia, a Cifra de César, também conhecida como cifra de troca, código de César ou troca de César, é
+          uma das mais simples e conhecidas técnicas de criptografia. É um tipo de cifra de substituição na qual cada
+          letra do texto é substituída por outra, que se apresenta no alfabeto abaixo dela um número fixo de vezes. Por
+          exemplo, com uma troca de três posições, A seria substituído por D, B se tornaria E, e assim por diante. O
+          nome do método é em homenagem a Júlio César, que o usou para se comunicar com os seus generais.</p>
+        <p><a href="https://pt.wikipedia.org/wiki/Cifra_de_C%C3%A9sar" target="blank" class="know-more-link">Clique aqui para saber mais</a></p>
+      </div>
     </div>
-    <div class="about-cipher-div">
-      <h3 class="second-section-titles">Sobre a cifra de César</h3>
-      <p>Mussum Ipsum, cacilds vidis litro abertis. Viva Forevis aptent taciti sociosqu ad litora torquent. Quem num
-        gosta di mé, boa gentis num é. Interagi no mé, cursus quis, vehicula ac nisi. Praesent malesuada urna nisi, quis
-        volutpat erat hendrerit non. Nam vulputate dapibus.</p>
-    </div>
-  </div>
   </section>
 
   <script src="index.js" type="module"></script>
