lógica decode feita e implementada no html

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="form-div-offset">
           <label for="offset-input" class="message-title">Posição</label>
-          <input type="number" id="offset-input"  name="offset" value="1" min="1"/>
+          <input type="number" id="offset-input" name="offset" value="1" min="1" />
         </div>
         <div class="form-div-message">
           <label for="result-input" class="message-title">Resultado</label>
@@ -57,7 +57,8 @@
           letra do texto é substituída por outra, que se apresenta no alfabeto abaixo dela um número fixo de vezes. Por
           exemplo, com uma troca de três posições, A seria substituído por D, B se tornaria E, e assim por diante. O
           nome do método é em homenagem a Júlio César, que o usou para se comunicar com os seus generais.</p>
-        <p><a href="https://pt.wikipedia.org/wiki/Cifra_de_C%C3%A9sar" target="blank" class="know-more-link">Clique aqui para saber mais</a></p>
+        <p><a href="https://pt.wikipedia.org/wiki/Cifra_de_C%C3%A9sar" target="blank" class="know-more-link">Clique aqui
+            para saber mais</a></p>
       </div>
     </div>
   </section>
